Added logic for showing student lesson of course
