# app/Http/Controllers/Api/Lesson/Student/LessonController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers\Api\Lesson\Student;
 
 use App\Http\Controllers\Controller;
 use App\Http\Resources\Api\Lesson\Student\LessonResource;
+use App\Queries\Lesson\Student\GetLessonQuery;
 use App\Queries\Lesson\Student\GetLessonsQuery;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
@@ -12,7 +13,6 @@ use OpenApi\Attributes as OA;
 
 class LessonController extends Controller
 {
-
     #[OA\Get(
         path: '/student/courses/{course}/lessons',
         description: 'Retrieve a paginated list of lessons for the specified student\'s enrolled course.',
@@ -95,18 +95,85 @@ class LessonController extends Controller
     {
         $currentUser = $request->user();
 
-        $lessons = $query->handle($request, $currentUser, $course);
+        $gottenLessons = $query->handle($request, $currentUser, $course);
 
-        return LessonResource::collection($lessons)
+        return LessonResource::collection($gottenLessons)
             ->response()
             ->setStatusCode(SymfonyResponse::HTTP_OK);
     }
 
+    #[OA\Get(
+        path: '/student/courses/{course}/lessons/{lesson}',
+        description: 'Retrieve detailed information about the specified lesson for the specified student\'s enrolled course.',
+        summary: '[Student] Retrieve lesson details',
+        security: [['sanctum' => []]],
+        tags: ['Lesson'],
+        parameters: [
+            new OA\Parameter(
+                name: 'course',
+                description: 'Course identifier (slug).',
+                in: 'path',
+                required: true,
+                schema: new OA\Schema(
+                    type: 'string',
+                    example: 'math-101'
+                )
+            ),
+            new OA\Parameter(
+                name: 'lesson',
+                description: 'Lesson identifier (slug).',
+                in: 'path',
+                required: true,
+                schema: new OA\Schema(
+                    type: 'string',
+                    example: 'introduction-to-algebra'
+                )
+            )
+        ],
+        responses: [
+            new OA\Response(
+                response: SymfonyResponse::HTTP_OK,
+                description: 'Lesson details retrieved successfully.',
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(
+                            property: 'data',
+                            ref: '#/components/schemas/LessonStudentResponse'
+                        )
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: SymfonyResponse::HTTP_UNAUTHORIZED,
+                description: 'User is unauthenticated.'
+            ),
+            new OA\Response(
+                response: SymfonyResponse::HTTP_FORBIDDEN,
+                description: 'User does not have permissions.'
+            ),
+            new OA\Response(
+                response: SymfonyResponse::HTTP_NOT_FOUND,
+                description: 'Course or lesson not found.'
+            )
+        ]
+    )]
     /**
-     * Display the specified resource.
+     * Retrieve detailed information about the specified lesson for the specified student's enrolled course.
+     *
+     * @param Request $request
+     * @param GetLessonQuery $query
+     * @param string $course
+     * @param string $lesson
+     * @return JsonResponse
      */
-    public function show(string $id)
+    public function show(Request $request, GetLessonQuery $query, string $course, string $lesson): JsonResponse
     {
-        //
+        $currentUser = $request->user();
+
+        $gottenLesson = $query->handle($currentUser, $course, $lesson);
+
+        return LessonResource::make($gottenLesson)
+            ->response()
+            ->setStatusCode(SymfonyResponse::HTTP_OK);
     }
 }
